GitVersion1/objects/Ordering_Customers_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Revenue_Converted__c</fullName>
        <label>Annual Revenue (Converted)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Volume__c</fullName>
        <label>Potential Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ordering Customers Snapshot</label>
    <nameField>
        <label>Ordering Customers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordering Customers Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>